--- a/index.html
+++ b/index.html
@@ -7,11 +7,14 @@
         function calculate() {
             var year = document.getElementById("year").value;
             var month = document.getElementById("month").value;
+            var gender = document.getElementById("gender").value;
+
 
             parseInt(year);
             newMonth = month.toLowerCase();
+            newGender =
 
-            alert("Year :" + year + " Month : " + newMonth);
+                alert("Year :" + year + " Month : " + newMonth);
         }
     </script>
 </head>
