add card class, rows and columns

--- a/index.html
+++ b/index.html
@@ -9,12 +9,40 @@
 </head>
 
 <body>
-    <input style="height: 19px;" type="number" id="century" placeholder="Eg: 1989 = 19"><br>
-    <input style="height: 19px;" type="number" id="year" placeholder="Eg: 1989 = 89"><br>
-    <input style="height: 19px;" type="number" id="month" placeholder="Month"><br>
-    <input style="height: 19px;" type="number" id="day" placeholder="Day"><br>
-    <input style="height: 20px;" type="radio" name="gnd" id="male"> MALE</input><br>
-    <input style="height: 20px;" type="radio" name="gnd" id="female"> FEMALE</input><br>
-</body>
+    </div>
+
+    <div class="card" class="card" style=" opacity: 0.8; ">
+        <div class="card-body">
+            <div class="card-title">
+                <h1>CALCULATE NOW</h1>
+            </div>
+            <div>
+                <strong><em>Carefully fill in the form below then click the submit button to know your Akan name.</em></strong>
+            </div>
+            <div class="row">
+                <div class="col-sm-5">
+                    CENTURY BORN <br> YEAR BORN <br> MONTH BORN <br> DAY OF THE MONTH <br>GENDER <br>
+                </div>
+
+                <div class="col-sm-5">
+                    <div class="input">
+
+                        <input style="height: 19px;" type="number" id="century" placeholder="Eg: 1989 = 19"><br>
+                        <input style="height: 19px;" type="number" id="year" placeholder="Eg: 1989 = 89"><br>
+                        <input style="height: 19px;" type="number" id="month" placeholder="Month"><br>
+                        <input style="height: 19px;" type="number" id="day" placeholder="Day"><br>
+                        <input style="height: 20px;" type="radio" name="gnd" id="male"> MALE</input><br>
+                        <input style="height: 20px;" type="radio" name="gnd" id="female"> FEMALE</input><br>
+
+                    </div>
+                </div>
+
+                <button onclick="calculate()"> SUBMIT </button>
+            </div>
+
+        </div>
+
+    </div>
+    </div>
 
 </html>
