add header and description

--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
 </head>
 
 <body>
+    <header>
+        <h1>KNOW YOUR AKAN NAME</h1>
+    </header>
+    <p>
+        Most tribes have their own unique naming systems. Some use names of decesed loved ones, others are named after their grandparents while others are named after legends according to the culture history.
+    </p>
+
+    <p>
+        Akan names are derived from the Ghananian culture. The naming system in Ghana is a unique system not experienced elsewhere in the world. New born babies are named putting into consideration not only their genders but also the day of the week they were
+        born. New born boys and girls have their own set of names to choose from.
+    </p>
     </div>
 
     <div class="card" class="card" style=" opacity: 0.8; ">
