add list of names

--- a/index.html
+++ b/index.html
@@ -20,6 +20,20 @@
         Akan names are derived from the Ghananian culture. The naming system in Ghana is a unique system not experienced elsewhere in the world. New born babies are named putting into consideration not only their genders but also the day of the week they were
         born. New born boys and girls have their own set of names to choose from.
     </p>
+    <p>
+        Below is the list of male and female names to choose from for a new born in Ghana:
+    </p>
+
+    <div style="width: 50%; float: left;">
+
+        <b>MALE</b> <br> Sunday: Kwasi <br> Monday: Kwadwo <br> Tuesday: Kwabena <br> Wednesday: Kwaku <br> Thursday: Yaw <br> Friday: Kofi <br> Saturday: Kwame
+
+    </div>
+    <div style="width: 50%; float: left; ">
+
+        FEMALE <br> Sunday: Akosua <br> Monday: Adwoa <br> Tuesday: Abenaa <br> Wednesday: Akua <br> Thursday: Yaa <br> Friday: Afua <br> Saturday: Ama
+
+    </div>
     </div>
 
     <div class="card" class="card" style=" opacity: 0.8; ">
