--- a/index.html
+++ b/index.html
@@ -1,73 +1,114 @@
+­
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>AKAN NAME </title>
+    <!--<script>
+function calculate() {
+
+var year = document.getElementById("year").value;
+var month = document.getElementById("month").value;
+var day = document.getElementById("day").value;
+var male = document.getElementById("male");
+var female = document.getElementById("female");
+
+//var male = ["Kwasi", "Kwadwo", "Kwabena", "Kwaku", "Yaw", "Kofi", "Kwame"];
+//var female = ["Akosua", "Adwoa", "Abenaa", "Akua", "Yaa", "Afua", "Ama"];
+
+if (month <= 0 || month > 12) {
+
+alert("Please enter a valid month");
+
+} else if (day <= 0 || day > 31) {
+
+alert("Please enter a valid day");
+
+} else if (male.checked == true) {
+
+alert("your gender is male ");
+} else if (female.checked == true) {
+
+alert("your gender is female ");
+}
+
+}
+</script>-->
+    <script src="./script.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+
+    <style>
+        header {
+            text-align: center;
+            padding: 10px;
+        }
+    </style>
 </head>
 
-<body>
-    <header>
-        <h1>KNOW YOUR AKAN NAME</h1>
-    </header>
-    <p>
-        Most tribes have their own unique naming systems. Some use names of decesed loved ones, others are named after their grandparents while others are named after legends according to the culture history.
-    </p>
+<body style="text-align: center; background-image: url(./1wallpaperflare.com_wallpaper1.jpg); background-position: center; background-repeat: no-repeat;">
 
-    <p>
-        Akan names are derived from the Ghananian culture. The naming system in Ghana is a unique system not experienced elsewhere in the world. New born babies are named putting into consideration not only their genders but also the day of the week they were
-        born. New born boys and girls have their own set of names to choose from.
-    </p>
-    <p>
-        Below is the list of male and female names to choose from for a new born in Ghana:
-    </p>
+    <div class="container">
+        <div style="color: white;">
 
-    <div style="width: 50%; float: left;">
+            <header>
+                <h1>KNOW YOUR AKAN NAME</h1>
+            </header>
+            <p>
+                Most tribes have their own unique naming systems. Some use names of decesed loved ones, others are named after their grandparents while others are named after legends according to the culture history.
+            </p>
 
-        <b>MALE</b> <br> Sunday: Kwasi <br> Monday: Kwadwo <br> Tuesday: Kwabena <br> Wednesday: Kwaku <br> Thursday: Yaw <br> Friday: Kofi <br> Saturday: Kwame
+            <p>
+                Akan names are derived from the Ghananian culture. The naming system in Ghana is a unique system not experienced elsewhere in the world. New born babies are named putting into consideration not only their genders but also the day of the week they were
+                born. New born boys and girls have their own set of names to choose from.
+            </p>
+            <p>
+                Below is the list of male and female names to choose from for a new born in Ghana:
+            </p>
 
-    </div>
-    <div style="width: 50%; float: left; ">
+            <div style="width: 50%; float: left;">
 
-        FEMALE <br> Sunday: Akosua <br> Monday: Adwoa <br> Tuesday: Abenaa <br> Wednesday: Akua <br> Thursday: Yaa <br> Friday: Afua <br> Saturday: Ama
+                <b>MALE</b> <br> Sunday: Kwasi <br> Monday: Kwadwo <br> Tuesday: Kwabena <br> Wednesday: Kwaku <br> Thursday: Yaw <br> Friday: Kofi <br> Saturday: Kwame
 
-    </div>
-    </div>
-
-    <div class="card" class="card" style=" opacity: 0.8; ">
-        <div class="card-body">
-            <div class="card-title">
-                <h1>CALCULATE NOW</h1>
             </div>
-            <div>
-                <strong><em>Carefully fill in the form below then click the submit button to know your Akan name.</em></strong>
+            <div style="width: 50%; float: left; ">
+
+                FEMALE <br> Sunday: Akosua <br> Monday: Adwoa <br> Tuesday: Abenaa <br> Wednesday: Akua <br> Thursday: Yaa <br> Friday: Afua <br> Saturday: Ama
+
             </div>
-            <div class="row">
-                <div class="col-sm-5">
-                    CENTURY BORN <br> YEAR BORN <br> MONTH BORN <br> DAY OF THE MONTH <br>GENDER <br>
+        </div>
+
+        <div class="card" class="card" style=" opacity: 0.8; ">
+            <div class="card-body">
+                <div class="card-title">
+                    <h1>CALCULATE NOW</h1>
                 </div>
-
-                <div class="col-sm-5">
-                    <div class="input">
-
-                        <input style="height: 19px;" type="number" id="century" placeholder="Eg: 1989 = 19"><br>
-                        <input style="height: 19px;" type="number" id="year" placeholder="Eg: 1989 = 89"><br>
-                        <input style="height: 19px;" type="number" id="month" placeholder="Month"><br>
-                        <input style="height: 19px;" type="number" id="day" placeholder="Day"><br>
-                        <input style="height: 20px;" type="radio" name="gnd" id="male"> MALE</input><br>
-                        <input style="height: 20px;" type="radio" name="gnd" id="female"> FEMALE</input><br>
-
+                <div>
+                    <strong><em>Carefully fill in the form below then click the submit button to know your Akan name.</em></strong>
+                </div>
+                <div class="row">
+                    <div class="col-sm-5">
+                        CENTURY BORN <br> YEAR BORN <br> MONTH BORN <br> DAY OF THE MONTH <br>GENDER <br>
                     </div>
+
+                    <div class="col-sm-5">
+                        <div class="input">
+
+                            <input style="height: 19px;" type="number" id="century" placeholder="Eg: 1989 = 19"><br>
+                            <input style="height: 19px;" type="number" id="year" placeholder="Eg: 1989 = 89"><br>
+                            <input style="height: 19px;" type="number" id="month" placeholder="Month"><br>
+                            <input style="height: 19px;" type="number" id="day" placeholder="Day"><br>
+                            <input style="height: 20px;" type="radio" name="gnd" id="male"> MALE</input><br>
+                            <input style="height: 20px;" type="radio" name="gnd" id="female"> FEMALE</input><br>
+
+                        </div>
+                    </div>
+
+                    <button onclick="calculate()"> SUBMIT </button>
                 </div>
 
-                <button onclick="calculate()"> SUBMIT </button>
             </div>
 
         </div>
-
-    </div>
     </div>
 </body>
 
