--- a/index.html
+++ b/index.html
@@ -37,15 +37,9 @@ alert("your gender is female ");
     <script src="./script.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 
-    <style>
-        header {
-            text-align: center;
-            padding: 10px;
-        }
-    </style>
 </head>
 
-<body style="text-align: center; background-image: url(./1wallpaperflare.com_wallpaper1.jpg); background-position: center; background-repeat: no-repeat;">
+<body>
 
     <div class="container">
         <div style="color: white;">
