--- a/index.html
+++ b/index.html
@@ -36,13 +36,14 @@ alert("your gender is female ");
 </script>-->
     <script src="./script.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <link rel="stylesheet" href="./style.css">
 
 </head>
 
 <body>
 
     <div class="container">
-        <div style="color: white;">
+        <div class="mwili">
 
             <header>
                 <h1>KNOW YOUR AKAN NAME</h1>
@@ -59,14 +60,14 @@ alert("your gender is female ");
                 Below is the list of male and female names to choose from for a new born in Ghana:
             </p>
 
-            <div style="width: 50%; float: left;">
+            <div class="list">
 
                 <b>MALE</b> <br> Sunday: Kwasi <br> Monday: Kwadwo <br> Tuesday: Kwabena <br> Wednesday: Kwaku <br> Thursday: Yaw <br> Friday: Kofi <br> Saturday: Kwame
 
             </div>
-            <div style="width: 50%; float: left; ">
+            <div class="list">
 
-                FEMALE <br> Sunday: Akosua <br> Monday: Adwoa <br> Tuesday: Abenaa <br> Wednesday: Akua <br> Thursday: Yaa <br> Friday: Afua <br> Saturday: Ama
+                <b>FEMALE</b> <br> Sunday: Akosua <br> Monday: Adwoa <br> Tuesday: Abenaa <br> Wednesday: Akua <br> Thursday: Yaa <br> Friday: Afua <br> Saturday: Ama
 
             </div>
         </div>
